<resources>
    <string name="app_name">Hello World 7</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="are_you_sure_to_exit">Are you sure to exit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign In</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
</resources>