<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.logout.LogoutFragment"
    android:background="?colorSecondaryVariant"
    android:padding="10dp"
    >

    <ImageView
        android:id="@+id/iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/sign_out"
        android:src="@mipmap/ic_launcher_al" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_exit"
        android:textStyle="bold"
        android:textSize="17sp"
        android:id="@+id/headline"
        android:layout_toEndOf="@id/iv"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:textColor="?colorPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_to_exit"
        android:textSize="16sp"
        android:id="@+id/sure"
        android:layout_below="@id/headline"
        android:layout_toEndOf="@id/iv"
        android:layout_marginStart="15dp"
        android:textColor="?colorPrimaryVariant"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sure"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/view_shape"
        android:text="@string/exit" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btn_cancel"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/sure"
        android:background="@drawable/view_shape"/>

</RelativeLayout>