<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="40dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@color/secondaryColor">

    <Button
        android:padding="20dp"
        android:id="@+id/option_camera"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/camera_shape"
        android:backgroundTint="?colorPrimaryVariant"
        android:contentDescription="@string/profile"
        android:drawableLeft="@drawable/ic_camera_profile"
        android:drawableTint="@color/white"
        android:text="@string/camera"
        android:textSize="15sp"
        android:drawablePadding="7dp"

        tools:ignore="MissingConstraints"
        android:elevation="0dp"/>

    <Button
        android:padding="20dp"
        android:id="@+id/option_gallery"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/option_camera"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/gallery_shape"
        android:backgroundTint="@color/primaryColor"
        android:contentDescription="@string/profile"
        android:drawableLeft="@drawable/ic_gallery_profile"
        android:drawableTint="@color/white"
        android:drawablePadding="7dp"
        android:elevation="0dp"
        android:text="@string/gallery"
        android:textSize="15sp"

        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>